--- a/index.html
+++ b/index.html
@@ -56,35 +56,134 @@
             </div>
             <div id="about">
                 <h1 align="center">About Me</h1>
-                <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
-                <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering in general, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
-                <p>I'm passionate about women in tech as well as LGBTQ visibility. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
+                <div class="row">
+                    <div class="col-md-8">
+                        <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
+                        <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
+                        <p>I'm passionate about women in tech as well as LGBTQ visibility. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <p>Insert Image Here</p>
+                    </div>
+                </div>
             </div>
             <div id="education">
+                <h1 align="center">Education</h1>
+                <div class="row">
+                    <div class="col-md-3">
+                        <p>Insert Image Here</p>
+                    </div>
+                    <div class="col-md-9">
+                        <h4>B.S. Computer Science, University of Illinois at Urbana-Champaign</h4>
+                        <ul>
+                            <li>Women in Computer Science - Mentoring Director, Tech Team Member</li>
+                            <li>Society of Women Engineers - Recruitment CS Liason, Team Tech Member</li>
+                            <li>Engineering Student Alumni Ambassador</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div id="experience">
+                <h1 align="center">Experience</h1>
+                <div class="row">
+                    <div class="col-md-3">
+                        <h2>Dow Chemical Company</h2>
+                    </div>
+                    <div class="col-md-9">
+                        <h4>Systems Intern</h4>
+                        <p><strong>August 2014 - Present</strong></p>
+                        <ul>
+                            <li>Currently implementing the database-to-client-side search functionality for a web application that allows users to simulate chemical experiments.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <h2>kCura</h2>
+                    </div>
+                    <div class="col-md-9">
+                        <h4>Software Engineering Intern</h4>
+                        <p><strong>May 2014 - August 2014</strong></p>
+                        <ul>
+                            <li>Using the custom Relativity API, Visual C#, and SQL, continued development on an application built on top of kCura’s flagship product Relativity that analyzes and processes 5,000 U.S. patent grants downloaded weekly from a custom Google site.</li>
+                            <li>Added features to the processing of such data that allows the user to sort the patents by over 400 patent classifications.</li>
+                            <li>Added components that processed assignment data for patent grants to keep the assignees/owners of patents up-to-date daily. </li>
+                            <li>Using the Espacenet REST API, added components that validate the patent based on its legal events.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <h2>Miss Possible</h2>
+                    </div>
+                    <div class="col-md-9">
+                        <h4>Web Developer</h4>
+                        <p><strong>February 2014 - Present</strong></p>
+                        <ul>
+                            <li>Developed and maintaining the website for Miss Possible (<a href="http://www.bemisspossible.com" target="_blank">http://www.bemisspossible.com</a>), a startup that is focused on empowering girls by providing them strong female role models through dolls as well as developing apps that let girls learn about these role models and do hands-on activities led by them.</li>
+                            <li>Assisted in using social media and other mediums to market Miss Possible’s <a href="https://www.indiegogo.com/projects/miss-possible-dolls-to-inspire-girls-across-generations">Indiegogo campaign</a> that raised $85,755.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <h2>Procter &#38; Gamble</h2>
+                    </div>
+                    <div class="col-md-9">
+                        <h4>GBS-HRSS Information Technology Development Organization Intern</h4>
+                        <p><strong>July 2013 - August 2013</strong></p>
+                        <ul>
+                            <li>Assisted in entering necessary data regarding enterprise architecture into the data repository MEGA.</li>
+		                    <li>Prepared a training presentation regarding MEGA and its functions for team members. </li>
+		                    <li>Assisted in the testing of an in-house application on various mobile operating systems and Internet browsers. </li>
+		                    <li>Collated results from testing parts of P&#38;G Human Resources Services &#38; Solutions' Business Continuity Plan.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <h2>Paycor, Inc.</h2>
+                    </div>
+                    <div class="col-md-9">
+                        <h4>Information Technology Application Development Intern</h4>
+                        <p><strong>June 2012 - August 2012</strong></p>
+                        <ul>
+                            <li>Designed the user interface for one of Paycor's in-house web applications using HTML and CSS.</li>
+		                    <li>Analyzed video software options to help Paycor with offshore employees in Mumbai, India.</li>
+		                    <li>Coordinated knowledge transfer documenetation with offshore employees in Mumbai, India.</li>
+		                    <li>Developed a data-driven version of Paycor's training application using Microsoft .NET Visual C#.</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div id="projects">
+                <h1 align="center">Projects</h1>
             </div>
-            <div id="skills"></div>
-            <div id="follow"></div>
+            <div id="skills">
+                <h1 align="center">Skills</h1>
+            </div>
+            <div id="follow">
+                <h1 align="center">Follow Me</h1>
+            </div>
             <div id="contact">
+                <h1 align="center">Contact Me</h1>
                 <div class="row">
-	               <form role="form" method="POST" action="http://forms.brace.io/elchao96@gmail.com">
-		              <div class="form-group">
-			             <label for="nameInput">Name</label>
-			             <input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter name">
-		              </div>
-		              <div class="form-group">
-			             <label for="emailInput">Email</label>
-			             <input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter email">
-		              </div>
-		              <div class="form-group">
-			             <label for="messageInput">Message</label>
-			             <textarea class="form-control" name="message" id="messageInput" rows="6" placeholder="Enter message"></textarea>
-		              </div>
-    	               <button type="submit" value="Send" class="btn btn-default">Send</button>
-	               </form>
+                    <p>You can contact me via email: <a href="mailto:elchao96@gmail.com">elchao96@gmail.com</a>. You can also reach me via LinkedIn or via the form to the right. Trust me, it works!</p>
+                    <form role="form" method="POST" action="http://forms.brace.io/elchao96@gmail.com">
+                        <div class="form-group">
+                            <label for="nameInput">Name</label>
+                            <input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter Name"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="emailInput">Email Address</label>
+                            <input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter Email" />
+                        </div>
+                        <div class="form-group">
+                            <label for="messageInput">Message</label>
+                            <textarea class="form-control" name="message" id="messageInput" rows="6" placeholder="Enter Message"></textarea>
+                        </div>
+                        <button type="submit" value="Send" class="btn btn-primary">Send Message</button>
+                    </form>
                 </div>
             </div>
         </div>
