--- a/index.html
+++ b/index.html
@@ -164,11 +164,17 @@
             </div>
             <div id="follow">
                 <h1 align="center">Follow Me</h1>
+                <div class="row">
+                    <ul id="socialMediaLinks">
+                        <li><a href="mailto:elchao96@gmail.com"><i class="fa fa-envelope fa-5x"></i></a></li>
+                        <li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-5x"></i></a></li>
+                        <li><a href="http://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-5x"></i></a></li>
+                    </ul>
+                </div>
             </div>
             <div id="contact">
                 <h1 align="center">Contact Me</h1>
                 <div class="row">
-                    <p>You can contact me via email: <a href="mailto:elchao96@gmail.com">elchao96@gmail.com</a>. You can also reach me via LinkedIn or via the form to the right. Trust me, it works!</p>
                     <form role="form" method="POST" action="http://forms.brace.io/elchao96@gmail.com">
                         <div class="form-group">
                             <label for="nameInput">Name</label>
