adding some images and adding to my skills section

--- a/index.html
+++ b/index.html
@@ -161,6 +161,44 @@
             </div>
             <div id="skills">
                 <h1 align="center">Skills</h1>
+                <div class="row">
+                    <div class="col-md-3">
+                        <h4>Front-End</h4>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                            <li>jQuery</li>
+                            <li>Wo</li>
+                            <li>KnockoutJS</li>
+                            <li>AngularJS</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h4>Back-end</h4>
+                        <ul>
+                            <li>PHP</li>
+                            <li>SQL</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h4>Programming Languages</h4>
+                        <ul>
+                            <li>C#</li>
+                            <li>Java</li>
+                            <li>C++</li>
+                            <li>Python</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h4>Design</h4>
+                        <ul>
+                            <li>Photoshop</li>
+                            <li>Illustrator</li>
+                            <li>InDesign</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div id="follow">
                 <h1 align="center">Follow Me</h1>
