finished what I was doing

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <li>CSS</li>
                             <li>Javascript</li>
                             <li>jQuery</li>
-                            <li>Wo</li>
+                            <li>WordPress</li>
                             <li>KnockoutJS</li>
                             <li>AngularJS</li>
                         </ul>
