--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
         <link rel="stylesheet" href="assets/css/site.css"/>
         <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
-        
-        <!--scripts-->
-        <script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
-        <script src="assets/scripts/site.js" type="text/javascript"></script>
-        <script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
-        <script src="assets/scripts/modernizr.js" type="text/javascript"></script>
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -158,13 +152,48 @@
             </div>
             <div id="projects">
                 <h1 align="center">Projects</h1>
+                <div class="row">
+                    <div class="col-md-3">
+                        <h2><a href="http://www.bemisspossible.com">Miss Possible Website</a></h2>
+                    </div>
+                    <div class="col-md-3">
+                        <h2><a href="http://recourser.herokuapp.com">Recourser</a></h2>
+                    </div>
+                    <div class="col-md-3">
+                        <h2><a href="http://web.engr.illinois.edu/~bifft2">Where's Waldo International</a></h2>
+                    </div>
+                    <div class="col-md-3">
+                        <h2><a href="http://wcssignin.web.engr.illinois.edu/">WCS Sign In Application</a></h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <p>HTML, CSS, Javascript, jQuery, PHP, MySQL, WordPress</p>
+                        <p>Collaborators: Kelly Lin, Elyce Heffez, Supriya Hobbs</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p>HTML, CSS, jQuery, Python, Flask</p>
+                        <p>Collaborated with: Andrey Zaytsev, Dingcheng Yue, Brianna Ifft</p>
+                        <p>MHacks 2013</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p>HTML, CSS, Javascript, Google Maps API, social media APIs</p>
+                        <p>Collaborated with: Brianna Ifft, Robin Sturm, Corly Leung</p>
+                        <p>Facebook Midwest Regional Hackathon 2013</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p>HTML, CSS, jQuery, PHP, MySQL</p>
+                        <p>Collaborated with: Khulan Myagmadorj, Anne Dalidonis, Kavya Gundavarum, Andrea Fitzpatrick, Robin Sturm, Violet Zou, Eva Shih, Brianna Ifft, Jenny Cheng, Angela Ding</p>
+                        <p>UIUC WCS Tech Team 2013</p>
+                    </div>
+                </div>
             </div>
             <div id="skills">
                 <h1 align="center">Skills</h1>
                 <div class="row">
                     <div class="col-md-3">
-                        <h4>Front-End</h4>
-                        <ul>
+                        <h2>Front-End</h2>
+                        <ul class="skillsList">
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>Javascript</li>
@@ -175,16 +204,16 @@
                         </ul>
                     </div>
                     <div class="col-md-3">
-                        <h4>Back-end, Platforms</h4>
-                        <ul>
+                        <h2>Back-end, Platforms</h2>
+                        <ul class="skillsList">
                             <li>ASP.NET MVC</li>
                             <li>PHP</li>
                             <li>SQL</li>
                         </ul>
                     </div>
                     <div class="col-md-3">
-                        <h4>Programming Languages</h4>
-                        <ul>
+                        <h2>Programming Languages</h2>
+                        <ul class="skillsList">
                             <li>C#</li>
                             <li>Java</li>
                             <li>C++</li>
@@ -192,8 +221,8 @@
                         </ul>
                     </div>
                     <div class="col-md-3">
-                        <h4>Design</h4>
-                        <ul>
+                        <h2>Design</h2>
+                        <ul class="skillsList">
                             <li>Photoshop</li>
                             <li>Illustrator</li>
                             <li>InDesign</li>
@@ -233,4 +262,9 @@
             </div>
         </div>
     </body>
+    <!--scripts-->
+    <script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="assets/scripts/site.js" type="text/javascript"></script>
+    <script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+    <script src="assets/scripts/modernizr.js" type="text/javascript"></script>
 </html>
