--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="home">
                 <h1 align="center">Emily Chao</h1>
                 <p>I'm aspiring software engineer. Feel free to check out my work.</p>
-                <i class="fa fa-chevron-circle-down fa-5x"></i>
+                <p align="center"><i class="fa fa-chevron-circle-down fa-5x"></i></p>
             </div>
             <div id="about">
                 <h1 align="center">About Me</h1>
