--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
                            <span class="icon-bar"></span>
                            <span class="icon-bar"></span>
                        </button>
-                       <a class="navbar-brand" href="#"><img alt="Emily Chao" src="assets/images/favicon.png" /></a>
+                       <a class="navbar-brand scroll-link" href="#" data-id="home">Emily Chao</a>
                    </div>
                    <div class="collapse navbar-collapse navbar-responsive-collapse" id="mainNav">
                        <ul class="nav navbar-nav">
-                           <li><a href="#" class="scroll-link" data-id="home">Home</a></li>
                            <li><a href="#" class="scroll-link" data-id="about">About Me</a></li>
                            <li><a href="#" class="scroll-link" data-id="education">Education</a></li>
                            <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
@@ -46,7 +45,7 @@
             <div id="home">
                 <h1 align="center">Emily Chao</h1>
                 <p>I'm aspiring software engineer. Feel free to check out my work.</p>
-                <p align="center"><i class="fa fa-chevron-circle-down fa-5x"></i></p>
+                <p align="center"><a href="#" class="scroll-link" data-id="about"><i class="fa fa-chevron-circle-down fa-5x"></i></a></p>
             </div>
             <div id="about">
                 <h1 align="center">About Me</h1>
