--- a/index.html
+++ b/index.html
@@ -17,36 +17,38 @@
         <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     </head>
     <body>
-        <div class="wrapper">
-            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  			   <div class="container-fluid">
-                   <div class="navbar-header">
-                       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNav">
-                           <span class="sr-only">Toggle navigation</span>
-                           <span class="icon-bar"></span>
-                           <span class="icon-bar"></span>
-                           <span class="icon-bar"></span>
-                       </button>
-                       <a class="navbar-brand scroll-link" href="#" data-id="home">Emily Chao</a>
-                   </div>
-                   <div class="collapse navbar-collapse navbar-responsive-collapse" id="mainNav">
-                       <ul class="nav navbar-nav">
-                           <li><a href="#" class="scroll-link" data-id="about">About Me</a></li>
-                           <li><a href="#" class="scroll-link" data-id="education">Education</a></li>
-                           <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
-                           <li><a href="#" class="scroll-link" data-id="projects">Projects</a></li>
-                           <li><a href="#" class="scroll-link" data-id="skills">Skills</a></li>
-                           <li><a href="#" class="scroll-link" data-id="follow">Follow Me</a></li>
-                           <li><a href="#" class="scroll-link" data-id="contact">Contact Me</a></li>
-                       </ul>
-                   </div>
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  		    <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNav">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand scroll-link" href="#" data-id="home">Emily Chao</a>
                 </div>
-            </nav>
-            <div id="home">
-                <h1 align="center">Emily Chao</h1>
-                <p>I'm aspiring software engineer. Feel free to check out my work.</p>
-                <p align="center"><a href="#" class="scroll-link" data-id="about"><i class="fa fa-chevron-circle-down fa-5x"></i></a></p>
+                <div class="collapse navbar-collapse navbar-responsive-collapse" id="mainNav">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#" class="scroll-link" data-id="about">About Me</a></li>
+                        <li><a href="#" class="scroll-link" data-id="education">Education</a></li>
+                        <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
+                        <li><a href="#" class="scroll-link" data-id="projects">Projects</a></li>
+                        <li><a href="#" class="scroll-link" data-id="skills">Skills</a></li>
+                        <li><a href="#" class="scroll-link" data-id="follow">Follow Me</a></li>
+                        <li><a href="#" class="scroll-link" data-id="contact">Contact Me</a></li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+        <div id="home">
+            <div id="homeText">
+                <h1 align="center">Emily Chao</h1>
+                <p align="center">I'm aspiring software engineer. Feel free to check out my work.</p>
+            </div>
+            <p align="center" id="arrowDown"><a href="#" class="scroll-link" data-id="about"><i class="fa fa-chevron-circle-down fa-5x"></i></a></p>
+        </div>
+        <div class="wrapper">
             <div id="about">
                 <h1 align="center">About Me</h1>
                 <div class="row">
