editing the about section

--- a/index.html
+++ b/index.html
@@ -52,21 +52,16 @@
             <div id="about">
                 <h1 align="center">About Me</h1>
                 <div class="row">
-                    <div class="col-md-8">
-                        <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
-                        <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
-                        <p>I'm passionate about women in tech as well as LGBTQ visibility. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <p>Insert Image Here</p>
-                    </div>
+                    <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
+                    <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
+                    <p>I'm passionate about women in tech as well as LGBTQ visibility. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
                 </div>
             </div>
             <div id="education">
                 <h1 align="center">Education</h1>
                 <div class="row">
                     <div class="col-md-3">
-                        <p>Insert Image Here</p>
+                        <img alt="UIUC" src="assets/images/illinois.png" />
                     </div>
                     <div class="col-md-9">
                         <h4>B.S. Computer Science, University of Illinois at Urbana-Champaign</h4>
