changed brace forms

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h1 align="center">Education</h1>
                 <div class="row">
                     <div class="col-md-3">
-                        <img alt="UIUC" src="assets/images/illinois.png" />
+                        <!--<img alt="UIUC" src="assets/images/illinois.png" />-->
                     </div>
                     <div class="col-md-9">
                         <h4>B.S. Computer Science, University of Illinois at Urbana-Champaign</h4>
@@ -239,7 +239,7 @@
             <div id="contact">
                 <h1 align="center">Contact Me</h1>
                 <div class="row">
-                    <form role="form" method="POST" action="http://forms.brace.io/elchao96@gmail.com">
+                    <form role="form" method="POST" action="http://formspree.io/elchao96@gmail.com">
                         <div class="form-group">
                             <label for="nameInput">Name</label>
                             <input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter Name"/>
