finally got the navbar to be sticky yay

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     </head>
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <header>
+            <div id="home">
+                <div id="homeText">
+                    <h1 align="center">Emily Chao</h1>
+                    <p align="center">I'm aspiring software engineer. Feel free to check out my work.</p>
+                </div>
+                <p align="center" id="arrowDown"><a href="#" class="scroll-link" data-id="filler"><i class="fa fa-chevron-circle-down fa-5x"></i></a></p>
+            </div>
+        </header>
+        <nav class="navbar navbar-default" role="navigation">
   		    <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainNav">
@@ -41,14 +50,8 @@
                 </div>
             </div>
         </nav>
-        <div id="home">
-            <div id="homeText">
-                <h1 align="center">Emily Chao</h1>
-                <p align="center">I'm aspiring software engineer. Feel free to check out my work.</p>
-            </div>
-            <p align="center" id="arrowDown"><a href="#" class="scroll-link" data-id="about"><i class="fa fa-chevron-circle-down fa-5x"></i></a></p>
-        </div>
         <div class="wrapper">
+            <div id="filler"></div>
             <div id="about">
                 <h1 align="center">About Me</h1>
                 <div class="row">
