--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h1 align="center">Education</h1>
                 <div class="row">
                     <div class="col-md-3">
-                        <!--<img alt="UIUC" src="assets/images/illinois.png" />-->
+                        <p align="center"><img alt="UIUC" src="assets/images/illinois.png" /></p>
                     </div>
                     <div class="col-md-9">
                         <h4>B.S. Computer Science, University of Illinois at Urbana-Champaign</h4>
