--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="row">
                     <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
                     <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
-                    <p>I'm passionate about women in tech as well as LGBTQ visibility. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
+                    <p>I'm passionate about bridging the diversity gap in the technology industry, as well as increasing visibility for the Asian American LGBTQ population. In my (little-to-none) spare time, you can find me hanging out in the WCS office at UIUC, drafting my next post on Medium, trying to relive my figure skating days at the U of I ice rink and/or singing at the top of my lungs to my 4-hour-long main playlist on Spotify.</p>
                 </div>
             </div>
             <div id="education">
