--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <div id="experience">
                 <h1 align="center">Experience</h1>
                 <div class="row">
-                    <div class="col-md-3">
-                        <h2>Dow Chemical Company</h2>
+                    <div class="col-md-3 companyDiv">
+                        <h2 class="companyName">Dow Chemical Company</h2>
                     </div>
                     <div class="col-md-9">
                         <h4>Systems Intern</h4>
@@ -91,8 +91,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3">
-                        <h2>kCura</h2>
+                    <div class="col-md-3 companyDiv">
+                        <h2 class="companyName">kCura</h2>
                     </div>
                     <div class="col-md-9">
                         <h4>Software Engineering Intern</h4>
@@ -106,8 +106,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3">
-                        <h2>Miss Possible</h2>
+                    <div class="col-md-3 companyDiv">
+                        <h2 class="companyName">Miss Possible</h2>
                     </div>
                     <div class="col-md-9">
                         <h4>Web Developer</h4>
@@ -119,8 +119,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3">
-                        <h2>Procter &#38; Gamble</h2>
+                    <div class="col-md-3 companyDiv">
+                        <h2 class="companyName">Procter &#38; Gamble</h2>
                     </div>
                     <div class="col-md-9">
                         <h4>GBS-HRSS Information Technology Development Organization Intern</h4>
@@ -134,8 +134,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3">
-                        <h2>Paycor, Inc.</h2>
+                    <div class="col-md-3 companyDiv">
+                        <h2 class="companyName">Paycor, Inc.</h2>
                     </div>
                     <div class="col-md-9">
                         <h4>Information Technology Application Development Intern</h4>
