--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                         <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
                         <li><a href="#" class="scroll-link" data-id="projects">Projects</a></li>
                         <li><a href="#" class="scroll-link" data-id="skills">Skills</a></li>
-                        <li><a href="#" class="scroll-link" data-id="follow">Follow Me</a></li>
                         <li><a href="#" class="scroll-link" data-id="contact">Contact Me</a></li>
                     </ul>
                 </div>
@@ -229,19 +228,14 @@
                     </div>
                 </div>
             </div>
-            <div id="follow">
-                <h1 align="center">Follow Me</h1>
-                <div class="row">
-                    <ul id="socialMediaLinks">
-                        <li><a href="mailto:elchao96@gmail.com"><i class="fa fa-envelope fa-5x"></i></a></li>
-                        <li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-5x"></i></a></li>
-                        <li><a href="http://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-5x"></i></a></li>
-                    </ul>
-                </div>
-            </div>
             <div id="contact">
                 <h1 align="center">Contact Me</h1>
                 <div class="row">
+                    <ul id="socialMediaLinks" class="text-center">
+                        <li><a href="mailto:elchao96@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></li>
+                        <li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-2x"></i></a></li>
+                        <li><a href="http://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                    </ul>
                     <form role="form" method="POST" action="http://formspree.io/elchao96@gmail.com">
                         <div class="form-group">
                             <label for="nameInput">Name</label>
