adding some icons to my contact

--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
                         <li><a href="mailto:elchao96@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></li>
                         <li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-2x"></i></a></li>
                         <li><a href="http://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                        <li><a href="https://twitter.com/emilychaosays"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+                        <li><a href="https://medium.com/@emchao"><span id="mediumIcon">M</span></a></li>
                     </ul>
                     <form role="form" method="POST" action="http://formspree.io/elchao96@gmail.com">
                         <div class="form-group">
@@ -254,6 +256,8 @@
                 </div>
             </div>
         </div>
+        <div id="push"></div>
+        <footer></footer>
     </body>
     <!--scripts-->
     <script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
