making section titles uppercase

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="wrapper">
             <div id="filler"></div>
             <div id="about">
-                <h1 align="center">About Me</h1>
+                <h1 class="sectionTitle" align="center">About Me</h1>
                 <div class="row">
                     <p>Hello! Thanks for checking out my personal website! It's still under construction, but feel free to take a look around and give feedback!</p>
                     <p>I'm currently pursuing a Bachelor's degree in Computer Science at the University of Illinois at Urbana-Champaign. I'm deeply interested in full-stack web development, as well as software engineering and data analytics, but I'm also looking into expanding my knowledge in other areas of technology as well.</p>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div id="education">
-                <h1 align="center">Education</h1>
+                <h1 class="sectionTitle" align="center">Education</h1>
                 <div class="row">
                     <div class="col-md-3">
                         <p align="center"><img alt="UIUC" src="assets/images/illinois.png" /></p>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div id="experience">
-                <h1 align="center">Experience</h1>
+                <h1 class="sectionTitle" align="center">Experience</h1>
                 <div class="row">
                     <div class="col-md-3 companyDiv">
                         <h2 class="companyName">Dow Chemical Company</h2>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div id="projects">
-                <h1 align="center">Projects</h1>
+                <h1 class="sectionTitle" align="center">Projects</h1>
                 <div class="row">
                     <div class="col-md-3">
                         <h2><a href="http://www.bemisspossible.com">Miss Possible Website</a></h2>
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div id="skills">
-                <h1 align="center">Skills</h1>
+                <h1 class="sectionTitle" align="center">Skills</h1>
                 <div class="row">
                     <div class="col-md-3">
                         <h2>Front-End</h2>
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div id="contact">
-                <h1 align="center">Contact Me</h1>
+                <h1 class="sectionTitle" align="center">Contact Me</h1>
                 <div class="row">
                     <ul id="socialMediaLinks" class="text-center">
                         <li><a href="mailto:elchao96@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></li>
