editing the photos for the project

--- a/index.html
+++ b/index.html
@@ -151,38 +151,54 @@
             <div id="projects">
                 <h1 class="sectionTitle" align="center">Projects</h1>
                 <div class="row">
-                    <div class="col-md-3">
-                        <h2><a href="http://www.bemisspossible.com">Miss Possible Website</a></h2>
+                    <div class="col-md-8">
+                        <h4><a href="http://www.bemisspossible.com">Miss Possible Website</a></h4>
+                        <ul>
+                            <li>HTML, CSS, Javascript, jQuery, PHP, MySQL, WordPress</li>
+                            <li>Collaborators: Kelly Lin, Elyce Heffez, Supriya Hobbs</li>
+                        </ul>
                     </div>
-                    <div class="col-md-3">
-                        <h2><a href="http://recourser.herokuapp.com">Recourser</a></h2>
-                    </div>
-                    <div class="col-md-3">
-                        <h2><a href="http://web.engr.illinois.edu/~bifft2">Where's Waldo International</a></h2>
-                    </div>
-                    <div class="col-md-3">
-                        <h2><a href="http://wcssignin.web.engr.illinois.edu/">WCS Sign In Application</a></h2>
+                    <div class="col-md-3 projectDiv">
+                        <p align="center"><img alt="Miss Possible Website" src="assets/images/misspossible.png" /></p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3">
-                        <p>HTML, CSS, Javascript, jQuery, PHP, MySQL, WordPress</p>
-                        <p>Collaborators: Kelly Lin, Elyce Heffez, Supriya Hobbs</p>
+                    <div class="col-md-8">
+                        <h4><a href="http://recourser.herokuapp.com">Recourser</a></h4>
+                        <ul>
+                            <li>HTML, CSS, jQuery, Python, Flask</li>
+                            <li>Collaborated with: Andrey Zaytsev, Dingcheng Yue, Brianna Ifft</li>
+                            <li>MHacks 2013</li>
+                        </ul>
                     </div>
-                    <div class="col-md-3">
-                        <p>HTML, CSS, jQuery, Python, Flask</p>
-                        <p>Collaborated with: Andrey Zaytsev, Dingcheng Yue, Brianna Ifft</p>
-                        <p>MHacks 2013</p>
+                    <div class="col-md-3 projectDiv">
+                        <p align="center"><img alt="Recourser" src="assets/images/recourser.png" /></p>
                     </div>
-                    <div class="col-md-3">
-                        <p>HTML, CSS, Javascript, Google Maps API, social media APIs</p>
-                        <p>Collaborated with: Brianna Ifft, Robin Sturm, Corly Leung</p>
-                        <p>Facebook Midwest Regional Hackathon 2013</p>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4><a href="http://web.engr.illinois.edu/~bifft2">Where's Waldo International</a></h4>
+                        <ul>
+                            <li>HTML, CSS, Javascript, Google Maps API, social media APIs</li>
+                            <li>Collaborated with: Brianna Ifft, Robin Sturm, Corly Leung</li>
+                            <li>Facebook Midwest Regional Hackathon 2013</li>
+                        </ul>
                     </div>
-                    <div class="col-md-3">
-                        <p>HTML, CSS, jQuery, PHP, MySQL</p>
-                        <p>Collaborated with: Khulan Myagmadorj, Anne Dalidonis, Kavya Gundavarum, Andrea Fitzpatrick, Robin Sturm, Violet Zou, Eva Shih, Brianna Ifft, Jenny Cheng, Angela Ding</p>
-                        <p>UIUC WCS Tech Team 2013</p>
+                    <div class="col-md-3 projectDiv">
+                        <p align="center"><img alt="Where's Waldo International" src="assets/images/wherewaldo.png" /></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4><a href="http://wcssignin.web.engr.illinois.edu/">WCS Sign In Application</a></h4>
+                        <ul>
+                            <li>HTML, CSS, jQuery, PHP, MySQL</li>
+                            <li>Collaborated with: Khulan Myagmadorj, Anne Dalidonis, Kavya Gundavarum, Andrea Fitzpatrick, Robin Sturm, Violet Zou, Eva Shih, Brianna Ifft, Jenny Cheng, Angela Ding</li>
+                            <li>UIUC WCS Tech Team 2013</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 projectDiv">
+                        <p align="center"><img alt="WCS Sign In Application" src="assets/images/wcssignin.png" /></p>
                     </div>
                 </div>
             </div>
@@ -231,13 +247,6 @@
             <div id="contact">
                 <h1 class="sectionTitle" align="center">Contact Me</h1>
                 <div class="row">
-                    <ul id="socialMediaLinks" class="text-center">
-                        <li><a href="mailto:elchao96@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></li>
-                        <li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-2x"></i></a></li>
-                        <li><a href="http://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-                        <li><a href="https://twitter.com/emilychaosays"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-                        <li><a href="https://medium.com/@emchao"><span id="mediumIcon">M</span></a></li>
-                    </ul>
                     <form role="form" method="POST" action="http://formspree.io/elchao96@gmail.com">
                         <div class="form-group">
                             <label for="nameInput">Name</label>
@@ -258,7 +267,16 @@
             </div>
         </div>
         <div id="push"></div>
-        <footer></footer>
+        <footer>
+            <ul id="socialMediaLinks" class="text-center">
+                <li><a href="mailto:elchao96@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></li>
+                <li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-2x"></i></a></li>
+                <li><a href="http://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                <li><a href="https://twitter.com/emilychaosays"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+                <li><a href="https://medium.com/@emchao"><span id="mediumIcon">M</span></a></li>
+            </ul>
+            <p align="center">Made with <i class="fa fa-heart"></i>, Bootstrap, and Font-Awesome.</p>
+        </footer>
     </body>
     <!--scripts-->
     <script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
