--- a/index.html
+++ b/index.html
@@ -248,19 +248,19 @@
                 <h1 class="sectionTitle" align="center">Contact Me</h1>
                 <div class="row">
                     <form role="form" method="POST" action="http://formspree.io/elchao96@gmail.com">
-                        <div class="form-group">
+                        <div class="form-group col-md-6" id="nameForm">
                             <label for="nameInput">Name</label>
-                            <input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter Name"/>
+                            <input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter Name" tabindex="1" />
                         </div>
-                        <div class="form-group">
+                        <div class="form-group col-md-6" id="emailForm">
                             <label for="emailInput">Email Address</label>
-                            <input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter Email" />
+                            <input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter Email" tabindex="2" />
                         </div>
                         <div class="form-group">
                             <label for="messageInput">Message</label>
-                            <textarea class="form-control" name="message" id="messageInput" rows="6" placeholder="Enter Message"></textarea>
+                            <textarea class="form-control" name="message" id="messageInput" rows="6" placeholder="Enter Message" tabindex="3" ></textarea>
                         </div>
-                        <button type="submit" value="Send" class="btn btn-primary">Send Message</button>
+                        <button type="submit" value="Send" class="btn btn-primary" tabindex="4" >Send Message</button>
                     </form>
                 </div>
                 <br/><br/>
