added legend to skills

--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
             </div>
             <div id="skills">
                 <h1 class="sectionTitle" align="center">Skills</h1>
+                <ul id="skillLevelLegend" class="text-center">
+                    <li class="advanced">Advanced</li>
+                    <li class="proficient">Proficient</li>
+                    <li class="basic">Basic</li>
+                </ul>
                 <table class="table">
                     <thead>
                         <tr>
@@ -216,13 +221,20 @@
                             <td>Front-End</td>
                             <td>
                                 <ul class="skillsList">
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>Javascript</li>
-                                    <li>jQuery</li>
-                                    <li>WordPress</li>
-                                    <li>KnockoutJS</li>
-                                    <li>AngularJS</li>
+                                    <li class="advanced">HTML5</li>
+                                    <li class="advanced">CSS3</li>
+                                    <li class="proficient">Javascript</li>
+                                    <li class="basic">jQuery</li>
+                                    <li class="proficient">WordPress</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Javascript Frameworks</td>
+                            <td>
+                                <ul class="skillsList">
+                                    <li class="proficient">KnockoutJS</li>
+                                    <li class="basic">AngularJS</li>
                                 </ul>
                             </td>
                         </tr>
@@ -230,9 +242,9 @@
                             <td>Back-end, Platforms</td>
                             <td>
                                 <ul class="skillsList">
-                                    <li>ASP.NET MVC</li>
-                                    <li>PHP</li>
-                                    <li>SQL</li>
+                                    <li class="proficient">ASP.NET MVC</li>
+                                    <li class="basic">PHP</li>
+                                    <li class="basic">MySQL/SQL</li>
                                 </ul>
                             </td>
                         </tr>
@@ -240,10 +252,10 @@
                             <td>Programming Languages</td>
                             <td>
                                 <ul class="skillsList">
-                                    <li>C#</li>
-                                    <li>Java</li>
-                                    <li>C++</li>
-                                    <li>Python</li>
+                                    <li class="proficient">C#</li>
+                                    <li class="proficient">Java</li>
+                                    <li class="basic">C++</li>
+                                    <li class="basic">Python</li>
                                 </ul>
                             </td>
                         </tr>
@@ -251,9 +263,9 @@
                             <td>Design</td>
                             <td>
                                 <ul class="skillsList">
-                                    <li>Photoshop</li>
-                                    <li>Illustrator</li>
-                                    <li>InDesign</li>
+                                    <li class="proficient">Photoshop</li>
+                                    <li class="proficient">Illustrator</li>
+                                    <li class="proficient">InDesign</li>
                                 </ul>
                             </td>
                         </tr>
