unsuccessful in trying to get active links to work

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="navbar-brand scroll-link" href="#" data-id="home">Emily Chao</a>
                 </div>
                 <div class="collapse navbar-collapse navbar-responsive-collapse" id="mainNav">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav" id="navlinkList">
                         <li><a href="#" class="scroll-link" data-id="about">About Me</a></li>
                         <li><a href="#" class="scroll-link" data-id="education">Education</a></li>
                         <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
