--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 </div>
                 <div class="collapse navbar-collapse navbar-responsive-collapse" id="mainNav">
                     <ul class="nav navbar-nav" id="navlinkList">
-                        <li><a href="#" class="scroll-link" data-id="about">About Me</a></li>
-                        <li><a href="#" class="scroll-link" data-id="education">Education</a></li>
-                        <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
-                        <li><a href="#" class="scroll-link" data-id="projects">Projects</a></li>
-                        <li><a href="#" class="scroll-link" data-id="skills">Skills</a></li>
-                        <li><a href="#" class="scroll-link" data-id="contact">Contact Me</a></li>
+                        <li class="menuItem"><a href="#" class="scroll-link" data-id="about">About Me</a></li>
+                        <li class="menuItem"><a href="#" class="scroll-link" data-id="education">Education</a></li>
+                        <li class="menuItem"><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
+                        <li class="menuItem"><a href="#" class="scroll-link" data-id="projects">Projects</a></li>
+                        <li class="menuItem"><a href="#" class="scroll-link" data-id="skills">Skills</a></li>
+                        <li class="menuItem"><a href="#" class="scroll-link" data-id="contact">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
