trying to center things

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1 align="center">Emily Chao</h1>
                     <p align="center">I'm aspiring software engineer. Feel free to check out my work.</p>
                 </div>
-                <p align="center" id="arrowDown"><a href="#" class="scroll-link" data-id="filler"><i class="fa fa-chevron-circle-down fa-5x"></i></a></p>
+                <div class="text-center" id="arrowDown"><a href="#" class="scroll-link" data-id="filler"><i class="text-center fa fa-chevron-circle-down fa-5x"></i></a></div>
             </div>
         </header>
         <nav class="navbar navbar-default" role="navigation">
