edited the grammar a little

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="home">
                 <div id="homeText">
                     <h1 align="center">Emily Chao</h1>
-                    <p align="center">I'm aspiring software engineer. Feel free to check out my work.</p>
+                    <p align="center">I'm an aspiring software engineer. Feel free to check out my work.</p>
                 </div>
                 <div class="text-center" id="arrowDown"><a href="#" class="scroll-link" data-id="filler"><i class="text-center fa fa-chevron-circle-down fa-5x"></i></a></div>
             </div>
@@ -74,7 +74,7 @@
                         <h4>B.S. Computer Science, University of Illinois at Urbana-Champaign</h4>
                         <ul>
                             <li>Women in Computer Science - Mentoring Director, Tech Team Member</li>
-                            <li>Society of Women Engineers - Recruitment CS Liason, Team Tech Member</li>
+                            <li>Society of Women Engineers - Recruitment CS Liaison, Team Tech Member</li>
                             <li>Engineering Student Alumni Ambassador</li>
                         </ul>
                     </div>
